<resources>
    <string name="app_name">CW_Trainer</string>
    <string name="context_title">Morse code</string>
    <string name="Main_but1">模拟自由训练</string>
    <string name="Main_but2">课程学习训练</string>
    <string name="Main_but3">电码转换</string>
    <string name="Main_but4">说明及致谢</string>
    <string name="textview">TextView</string>
    <string name="but_showchange_content">转换器</string>
    <string name="but1_FRCclean_content">清空</string>
    <string name="but1_dash_content">划（dash）</string>
    <string name="but1_dot_content">点(dot)</string>
    <string name="but1_SingleKey_content">⚪</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">设置界面</string>
    <string name="the_label_studyModel">课程学习训练</string>
    <string name="the_label_Inputfreedom">模拟自由训练</string>
    <string name="title_activity_self_lesson">自定义课程3</string>

    <string name="but2_addselflesson">添加新的自定义内容</string>
    <string name="content_selflesson_inlet">SelfLesson_inlet</string>

    <string name="hint_word">输入...</string>
    <string name="button_save">保存</string>
    <string name="empty_not_saved">空的，没有添加</string>
    <string name="content_selflesson_menu">删除所有数据</string>

    <!--Study Model的字符数据 -->
    <string name="choosebar_label1">课堂1</string>
    <string name="choosebar_label2">课堂2</string>
    <string name="choosebar_label3">课堂3</string>
    <string name="but1_studymodel">开始</string>
    <string name="but2_studymodel">结束</string>
    <string name="but3_studymodel">清空</string>
    <string name="key_adding">Loading...</string>
    <string name="class3_title_content">自定义内容</string>
    <string name="transfrom_morsecode">-.-./--.-/-....../-.-./--.-/</string>
    <string name="transfrom_english">CQ CQ</string>
    <string name="button1_transfrom_title">英转码</string>
    <string name="button2_transfrom_title">码转英</string>
    <string name="button3_transfrom_title">清空</string>
    <string name="button4_dot_content">点 ·</string>
    <string name="button5_dash_content">划 -</string>
    <string name="button6_space_content">—空</string>

    <string name="mode_setting_title">设置界面</string>
    <string name="mode_setting_content_text1">位置：在主界面右上角导航栏，模块2-课程训练右上角导航栏可见。</string>
    <string name="mode_setting_content_text2">功能介绍：1.WPM：摩尔斯电码中的时长 最短是一点（dot），一划（dash）等于三点（dot），一个字母内的点划间隔为一点，一个单词内各字母的间隔为3点，两个单词间的字母间隔为7点。
    本应用均以此为标准。当您应用时，可以理解为 一个点（dot)的长度=1.2s/xwpm（x为您所设置的数值）</string>
    <string name="mode_setting_content_text3">功能介绍：2.双键左右位置互换：当打开此按钮，应用中双键（点/划）的位置会交换，选择您顺手的方式吧！</string>
    <string name="mode_setting_content_text4">功能介绍：3.训练规则设置：当选择1-随机排列时，模块2-课程学习训练中的码字将会随机输出；反之，当选择2-有序排列时，模块2-课程学习训练中的码字将会按照课程显示的顺序输出。</string>
    <string name="mode_setting_content_text5">2期工程：这是还没有完成的部分。或许，单键模式？连接蓝牙的外设电键输入？webservie云数据更新课程内容？</string>
    <string name="mode1_title_text">模块1-模拟自由训练</string>
    <string name="mode1_warning">注意，在此模块中，不要尝试高速(大于12WPM）的按键发报，模拟按键不是实际电键，没有自动回弹的弹簧，对手指不好，应注意！！</string>

    <string name="mode1_brief">简介：点击按钮，输入点划，滴滴答答，敲出摩尔斯电码，滑动查看上方对照表！</string>
    <string name="help_inputfreedom">
       详细介绍： 分三区：上部显示区负责显示摩尔斯对照表及显示输入的摩尔斯电码转码后的字符，中部清空按钮负责清空，下部有一个动态显示区，和两个进度条，（以输入英文为例）上方进度条走完则表示经过了一个单词中字母间的时间，
    下方进度条则表示两个单词间的时间，所以要想发报输出一个完整的字母，要在上方进度条结束之前；要想输出一个完整的单词，要在下方进度条结束之前。当下方进度条走完，则会添加空格，表示一个单词的结束。</string>
    <string name="mode2_title_text">模块2-课程学习训练</string>

    <string name="mode2_warning">注意：本页面中的顶部操作栏：可以进入设置及添加训练模式3的自定义课程！</string>
    <string name="mode2_brief">简介：选择课程，设置好码速，点击开始，边听码边抄写，向着掌握摩尔斯电码的方向前进！</string>
    <string name="mode2_content_sub1_text">训练模式</string>

    <string name="mode2_1_content">训练模式1：课程20节，课程内容来自于软件CW_Player。训练模式2：课程39节，课程内容是源于KOCH-method。训练模式3：用户可以点击右上角添加/修改自定义的课程内容。
        </string>
    <string name="mode2_1_content_1">训练模式1的训练思路简述：CW_Player中用户先熟悉每一节课的码字（自我敲码练习，听码练习，您可以搜索CW_Player下载软件查看具体方法），在本应用中，可以改版为用户可以先将课程内容在模块1-模拟自由训练中练习拍发，然后在模块2-课程学习训练，通过边听边抄写的方式，当抄写正确率达到95%以上，可以开启下一节课。</string>
    <string name="mode2_1_content_2">训练模式2的训练思路简述：用户按照课程顺序，选择合适的WPM（码速）（用户应选择一个较高的码组，即实际使用时的码组），当课程1的抄写正确率达到90%以上，可以进入下一个课程，重复如上，每次仅增加一个新的码字，重复训练，
    在高的码速下，达到对于莫尔斯电码同字符间的一种”直觉感受“（KOCH-method，可以进一步检索这种方法）。</string>
    <string name="mode2_1_content_3">训练模式3：或许，您有特别想用摩尔斯电码说出的话，何不添加内容，选择有序排列，加以练习呢？
    注意，不要输入中文，仍会输出音频，但不是正确的摩尔斯电码！</string>
    <string name="mode2_content_sub2_text">训练规则</string>
    <string name="mode2_2_content">在主界面导航栏点击右上角的设置按钮进行设置，分为两种，1-随机排列，2-有序（即按照显示的课程内容顺序）排列。</string>
    <string name="mode2_content_sub3_text">如何训练</string>
    <string name="mode2_3_content">点击一种训练模式，选择改训练模式下的课程，这时课程内容便会读取到中部显示区，后点击开始按钮即可开始训练。当自动播放完毕时，可以点击结束按钮，再点击开始按钮即可重启。
        注意：最大播放量：训练模式1，2在10组左右，训练模式3在5组。用户应注意自定义内容不要输入汉语，已设置唤醒键盘为英文。若输入为中文仍会输出，但并不是正确的摩尔斯码。</string>
    <string name="mode3_title_text">模块3-电码转换</string>

    <string name="mode3_warning">注意：如果中途离开了这个页面，内容会自动清空哦！</string>
    <string name="mode3_brief">简介：上方输入英文，下方输入摩尔斯电码，可复制，可粘贴，注意输入摩尔斯码要加“斜杠”隔开！</string>
    <string name="help_mode3">在上方输入区输入英文码字，点击英转码按钮，即可得到转换的摩尔斯电码；反之，在下方输入摩尔斯电码（注意这里需要用/来区分两个摩尔斯码），点击码转英按钮，即可得到转换的英文码。
    清空按钮点击后，将清空上下两个显示区。同时下方按钮支持用户敲码输入，但要注意，这里每个按钮有着200ms的点击间隔，不适合大规模输入。（PS：音频播放是内置函数生成的，这里做保留，可能是将来优化的一个方向）。</string>


    <string name="end_shuoming_title_text">说明</string>
    <string name="end_shuoming_content">欢迎使用本摩尔斯电码练习器，使用说明可点击主界面上方导航栏帮助（问号）按钮。
        本项目资源将会附于本人github中：https://github.com/happy-cmd
    如果您对本软件有什么好的建议，及反馈本软件的问题，欢迎发送邮件到：1015338292@qq.com。本项目声明仅为爱好制作，不涉及任何商业目的，欢迎有兴趣的你在我的基础上继续优化这个APP！</string>
    <string name="end_zhixie_title_text">致谢</string>
    <string name="end_zhixie_content1">1.本应用中的5wpm,7wpm,10wpm 的dot dash音频来源于：
        https://www.meridianoutpost.com/resources/etools/calculators/calculator-morse-code.php</string>
    <string name="end_zhixie_content2">2.本应用中的12wpm,14wpm,16wpm，18wpm,20wpm 的dot dash音频来源于：
        https://www.radio-amater.rs/morsecodegenerator/</string>
    <string name="end_zhixie_content3">3.本应用中的摩尔斯电码编码译码器的java源码来源于：
        https://blog.csdn.net/li_xunhuan/article/details/102884894</string>
    <string name="end_zhixie_content4">4.致谢CW_Player软件，可以说，本软件是其的模仿版，致敬，73！：
    http://f6dqm.free.fr/soft/cwplayer/en/cwplayer.htm</string>
    <string name="end_zhixie_content5">5.致谢Android developer的官方入门课程，使得本软件得以实现，本项目中：自定义课程也是
        所沿用的Room数据库也是沿用的其例程：https://github.com/google-developer-training/android-fundamentals-apps-v2</string>
    <string name="end_zhixie_content6">借鉴：6.关于按钮重复点击问题的解决：https://blog.csdn.net/zhufuing/article/details/53021835</string>
    <string name="end_zhixie_content7">借鉴：7.模块2中三个fragment框架的Viewpager2实现：https://www.jianshu.com/p/47e910865b98</string>
    <string name="end_zhixie_content8">借鉴：8.在Recyclerview中的点击监控；https://www.jianshu.com/p/2a1ea567d8b9</string>
    <string name="end_zhixie_content9">借鉴：9.用java生成单一音频的声音：https://riptutorial.com/android/example/28432/generate-tone-of-a-specific-frequency</string>
    <string name="end_zhixie_content10">借鉴：10.模块2中摩尔斯对照表的tablelaout制表实现：https://blog.csdn.net/xiayong1/article/details/53780745</string>
    <string name="end_zhixie_content11">以及在本软件制作过程中，网络中各种富有见解，有意义的回答，由于过多，便不再加以列出，感谢！</string>

    <string name="end_text">最后的话</string>

    <string name="end_text_content">1844年，世界上第一封电报，其内容为“What hath God wrought” 上帝啊，你创造了何等的奇迹！
    莫尔斯电码，可是个奇迹的事物啊！</string>
    <string name="i1">↓摩尔斯电码对照表↓</string>
    <string name="a">A .-</string>
    <string name="b">B -...</string>
    <string name="c">C -.-.</string>
    <string name="d">D -..</string>
    <string name="e">E .</string>
    <string name="f">F ..</string>
    <string name="g">G --.</string>
    <string name="h">H ....</string>
    <string name="i">I ..</string>
    <string name="j">J .---</string>
    <string name="k">K -.-</string>
    <string name="l">L .-..</string>
    <string name="m">M --</string>
    <string name="n">N -.</string>
    <string name="o">O ---</string>
    <string name="p">P .--.</string>
    <string name="q">Q --.-</string>
    <string name="r">R .-.</string>
    <string name="s">S ...</string>
    <string name="t">T -</string>
    <string name="u">U ..-</string>
    <string name="v">V ...-</string>
    <string name="w">W .--</string>
    <string name="x">X -..-</string>
    <string name="y">Y -.--</string>
    <string name="z">Z --..</string>
    <string name="characterfinish">"   "</string>
    <string name="_0">0 -----</string>
    <string name="_1">1 .----</string>
    <string name="_2">2 ..---</string>
    <string name="_3">3 ...--</string>
    <string name="_4">4 ....-</string>
    <string name="_5">5 .....</string>
    <string name="_6">6 -....</string>
    <string name="_7">7 --...</string>
    <string name="_8">8 ---..</string>
    <string name="_9">9 ----.</string>
    <string name="wenhao">？..--..</string>
    <string name="xiegang">/ -..-.</string>
    <string name="dian">. .-.-.-</string>
    <string name="douhao">, --..--</string>
    <string name="henggang">- -....-</string>
    <string name="dengyu">= -...-</string>
    <string name="jia">+ .-.-.</string>
    <string name="pie">\' .----.</string>
    <string name="yinhao">“ .-..-.</string>
    <string name="end">↑摩尔斯电码对照表↑</string>
    <string name="just_a_picture">just a picture</string>
    <string name="quote_text">人生难道还有什么事情，会比寻找答案更令人感到振奋？--艾萨克·阿西莫夫</string>


</resources>